Compatibility with OpenJDK 11